--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/logo.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/generic.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
     <title>Meat Me Inside | Contact</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <nav>
+      <div class="container">
+        <img src="assets/logo-transparent.png" alt="Meat Me Inside Logo" />
+        <ul id="nav-links">
+          <input type="checkbox" id="check" />
+          <span class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
+            <label for="check" class="close-menu"
+              ><i class="fas fa-times"></i
+            ></label>
+          </span>
+          <label for="check" class="open-menu"
+            ><i class="fas fa-bars"></i
+          ></label>
+        </ul>
+      </div>
+    </nav>
+    <main></main>
+    <footer>
+      <div class="social-icons">
+        <a href="#" class="social-icon"
+          ><img src="assets/facebook.png" alt="Facebook"
+        /></a>
+        <a href="#" class="social-icon"
+          ><img src="assets/instagram.png" alt="Instagram"
+        /></a>
+        <a href="#" class="social-icon"
+          ><img src="assets/whatsapp.png" alt="WhatsApp"
+        /></a>
+      </div>
+      &copy; 2025 Meat Me Inside. All rights reserved.
+    </footer>
+  </body>
 </html>
