feat/about finished

--- a/about.html
+++ b/about.html
@@ -39,7 +39,58 @@
         </ul>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <section id="about">
+        <div id="dark-overlay"></div>
+        <div class="container">
+          <div id="about-left">
+            <img src="assets/about.jpg" alt="Let them cook!" />
+          </div>
+          <div id="about-right">
+            <div class="section-header">
+              <hr />
+              <h2>About</h2>
+              <hr />
+            </div>
+            <section id="about-text">
+              <h3>MEAT ME INSIDE</h3>
+              <p>
+                Meat Me Inside has earned its reputation as one of the finest
+                steakhouses in Manila, delivering an unparalleled dining
+                experience with every cut. With twenty-one locations worldwide, we
+                take pride in our signature USDA Prime Black Angus steaks, fresh
+                seafood, and an award-winning wine selection, bringing together
+                the perfect harmony of flavor and craftsmanship.
+              </p>
+              <br />
+              <p>
+                Our beef is carefully hand-selected for its superior marbling,
+                texture, and flavor, then dry-aged to perfection to intensify its
+                richness. Each cut—whether it's our signature Porterhouse, Prime
+                New York Strip, Ribeye, or Filet Mignon—is expertly carved and
+                grilled to sizzling perfection, locking in its mouthwatering
+                juiciness with a beautifully caramelized crust.
+              </p>
+              <br />
+              <p>
+                Beyond our legendary steaks, Meat Me Inside offers an exquisite
+                selection of seafood, including fresh sashimi-grade tuna,
+                succulent Maine lobsters, and delicate Norwegian salmon. Our
+                classic sides, from creamy spinach to golden-brown roasted
+                potatoes, perfectly complement any dish, while appetizers such as
+                plump oysters, sizzling bacon, and vibrant salads set the stage
+                for an unforgettable meal.
+              </p>
+              <br />
+              <p>
+                At Meat Me Inside, every bite is an experience, and every meal is
+                a celebration of taste, quality, and passion.
+              </p>
+            </section>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="social-icons">
         <a href="#" class="social-icon"
