feat/gallery finished

--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,92 @@
         </ul>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <section id="gallery">
+        <div id="dark-overlay"></div>
+        <div class="container">
+          <section class="section-header">
+            <hr />
+            <h2>GALLERY</h2>
+            <hr />
+          </section>
+          <section id="image-grid">
+            <img
+              src="assets/gallery/nafinia-putra-Kwdp-0pok-I-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/alexander-fae-PK1pzUGQSjc-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/sam-moghadam-VpOpy6QrDrs-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/paul-griffin-WWST6E8LxeE-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/stu-moffat-JDpAPnfA7VM-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/igor-rand-Cnfu7o_780g-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/jason-leung-poI7DelFiVA-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/maria-orlova-oMTlhdFUhdI-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/alexander-fae-TivEEYzzhik-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/kyle-head-PW8K-W-Kni0-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/dinesh-ramaswamy-p-sEkj6-hAM-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/tim-toomey-STqHLqMne3k-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/edward-franklin-Nb_Q-M3Cdzg-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/lily-banse--YHSwy6uqvk-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/syed-f-hashemi-p91GLhQv35o-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg"
+              alt="Random Image"
+            />
+            <img
+              src="assets/gallery/brands-people-iFyLBKmCrmQ-unsplash.jpg"
+              alt="Random Image"
+            />
+          </section>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="social-icons">
         <a href="#" class="social-icon"
