feat/menu finished

--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,133 @@
         </ul>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <section id="menu">
+      <div id="dark-overlay"></div>
+        <div class="container">
+          <div class="section-header">
+            <hr />
+            <h2>Menu</h2>
+            <hr />
+          </div>
+          <div class="menu-grid">
+            <div class="menu-card">
+              <img
+                src="assets/menu/BACON-CHEESEBURGER.webp"
+                alt="Bacon Cheeseburger"
+              />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Bacon Cheeseburger</h5>
+                <p>
+                  A juicy, flame-grilled beef patty dripping with savory goodness,
+                  topped with crispy, smoky bacon and oozing melted cheddar.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img
+                src="assets/menu/FILET-MEDALLIONS.webp"
+                alt="Filet Medallions"
+              />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Filet Medallions</h5>
+                <p>
+                  Succulent, melt-in-your-mouth cuts of tender filet, seared to
+                  perfection for a rich, buttery bite.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img src="assets/menu/half-SLAB-RIBS.webp" alt="Half Slab Ribs" />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Half Slab Ribs</h5>
+                <p>
+                  Fall-off-the-bone tender, slow-cooked to perfection, and
+                  slathered in a smoky, finger-licking barbecue sauce.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img src="assets/menu/NEW-YORK-STRIP.webp" alt="New York Strip" />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>New York Strip</h5>
+                <p>
+                  A thick, juicy cut with a perfect balance of tenderness and
+                  bold, beefy flavor.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img
+                src="assets/menu/RIBEYE-12OZ-GRILLED-SHRIMP.webp"
+                alt="Ribeye 12oz Grilled Shrimp"
+              />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Ribeye 12oz Grilled Shrimp</h5>
+                <p>
+                  A thick, juicy 12oz ribeye, perfectly seared for a caramelized
+                  crust, paired with smoky, flame-grilled shrimp.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img src="assets/menu/DALLAS-FILET.webp" alt="Dallas Filet" />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Dallas Filet</h5>
+                <p>
+                  Incredibly tender, buttery-smooth, and bursting with rich, beefy
+                  flavor.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img src="assets/menu/FRIED-CATFISH.webp" alt="Fried Catfish" />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Fried Catfish</h5>
+                <p>
+                  Golden, crispy perfection on the outside, tender and flaky on
+                  the inside.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img
+                src="assets/menu/HAND-CUT-SIRLOIN.webp"
+                alt="Hand Cut Sirloin"
+              />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Hand Cut Sirloin</h5>
+                <p>
+                  Bold, juicy, and grilled to perfection, this lean and flavorful
+                  cut is a true steak lover's dream.
+                </p>
+              </div>
+            </div>
+            <div class="menu-card">
+              <img
+                src="assets/menu/PORTERHOUSE-T-BONE.webp"
+                alt="Porterhouse T-Bone"
+              />
+              <div class="gradient-dark-overlay"></div>
+              <div class="menu-text">
+                <h5>Porterhouse T-Bone</h5>
+                <p>
+                  A thick, juicy cut featuring the rich, beefy flavor of a New
+                  York strip and the tenderness of a filet.
+                </p>
+              </div>
+            </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="social-icons">
         <a href="#" class="social-icon"
